# advanced-docx-parser

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  test_basic.py
examples/: basic_usage.py
src/docx_processor/: __init__.py  cli.py  exceptions.py  models.py  processor.py
src/docx_processor/core/: __init__.py  basic.py
src/docx_processor/enhanced/: __init__.py  processor.py
src/docx_processor/professional/: __init__.py  processor.py
src/docx_processor/utils/: __init__.py  logger.py  text_utils.py
test_output_v2/: content.json  content_without_children.json
tests/: conftest.py  test_processor.py
