[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "docx-processor"
version = "0.1.0"
description = "Advanced DOCX document processing with hierarchical content extraction, image handling, and multiple output formats"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
maintainers = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["docx", "document-processing", "content-extraction", "pdf-conversion", "html-conversion"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Text Processing :: Markup",
    "Topic :: Office/Business :: Office Suites",
]
requires-python = ">=3.8.1"
dependencies = [
    "python-docx>=1.1.0",
    "pillow>=10.0.0",
    "beautifulsoup4>=4.12.0",
    "fuzzywuzzy>=0.18.0",
    "python-levenshtein>=0.21.0",
    "pydantic>=2.0.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
# Basic processing with LibreOffice support
enhanced = [
    "pymupdf>=1.23.0",
]

# Professional features with Aspose (requires license)
professional = [
    "aspose-words>=23.0.0",
]

# Development dependencies (simplified for initial setup)
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

# Documentation dependencies
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.22.0",
]

# All optional dependencies
all = [
    "docx-processor[enhanced,professional,dev,docs]"
]

[project.urls]
Homepage = "https://github.com/yourusername/docx-processor"
Documentation = "https://docx-processor.readthedocs.io"
Repository = "https://github.com/yourusername/docx-processor"
"Bug Tracker" = "https://github.com/yourusername/docx-processor/issues"
Changelog = "https://github.com/yourusername/docx-processor/blob/main/CHANGELOG.md"

[project.scripts]
docx-processor = "docx_processor.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/docx_processor"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/docs",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
]

# Development tools configuration
[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["docx_processor"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --cov=docx_processor --cov-report=term-missing --cov-report=xml"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["src/docx_processor"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]